--- a/predecir.html
+++ b/predecir.html
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="principal.html">INICIO<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">INICIO<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="asteroides.html">METEORITOS</a>
