--- a/predecir.html
+++ b/predecir.html
@@ -74,9 +74,9 @@
 
     <script type="text/javascript">
       const g = 6.674*(10^(-11));
-      var m = getElementsByClassName('.M');
-      var d = getElementsByClassName('.d');
-      var v = getElementsByClassName('.v');
+      var m = getElementsByClassName('M');
+      var d = getElementsByClassName('d');
+      var v = getElementsByClassName('v');
 
       function calculo() {
         var total = ((d*(v)^2)-(g*m))/(d)^2;
